@@ -31,12 +31,14 @@ isabelle.check-buffer.label=Commence full proof checking of current buffer
 isabelle.check-buffer.shortcut=C+e SPACE
 isabelle.cancel-execution.label=Cancel current proof checking process
 isabelle.cancel-execution.shortcut=C+e BACK_SPACE
-isabelle.input-isub.label=Input subscript
-isabelle.input-isub.shortcut=C+e DOWN
-isabelle.input-isup.label=Input superscript
-isabelle.input-isup.shortcut=C+e UP
-isabelle.input-bold.label=Input bold face
-isabelle.input-bold.shortcut=C+e RIGHT
+isabelle.control-isub.label=Control subscript
+isabelle.control-isub.shortcut=C+e DOWN
+isabelle.control-isup.label=Control superscript
+isabelle.control-isup.shortcut=C+e UP
+isabelle.control-bold.label=Control bold
+isabelle.control-bold.shortcut=C+e RIGHT
+isabelle.control-reset.label=Control reset
+isabelle.control-reset.shortcut=C+e LEFT
 
 #menu actions
 plugin.isabelle.jedit.Plugin.menu.label=Isabelle
